# python-101

./: Pipfile  README.md  pyproject.toml  requirements.txt
notebooks/: Python Basics - Chapter 1 - Hello world.ipynb  Python Basics - Chapter 2 - Datatypes and Operators.ipynb  Python Basics - Chapter 3 - Methods and Functions.ipynb  Python Basics - Chapter 4 - Collections.ipynb  Python Basics - Chapter 5 - Control flows and Iterables.ipynb  Python Basics - Chapter 6 - Functions.ipynb  Python Basics - Chapter 7 - Classes.ipynb  Python Basics - Chapter 8 - Miscellaneous.ipynb  ch-00-helloworld.ipynb  ch-00-helloworld.py  ch-01-datatypes.ipynb
notebooks/Chapter 1/: Python Basics - Chapter 1 - Hello world.ipynb  Python Basics - Chapter 1 - Hello world.py
notebooks/Chapter 2/: Python Basics - Chapter 2 - Datatypes and Operators.ipynb  Python Basics - Chapter 2 - Datatypes and Operators.py
notebooks/Chapter 3/: Python Basics - Chapter 3 - Methods and Functions.ipynb  Python Basics - Chapter 3 - Methods and Functions.py
notebooks/Chapter 4/: Python Basics - Chapter 4 - Collections.ipynb  Python Basics - Chapter 4 - Collections.py
notebooks/Chapter 5/: Python Basics - Chapter 5 - Control flows and Iterables.ipynb  Python Basics - Chapter 5 - Control flows and Iterables.py
notebooks/Chapter 6/: Python Basics - Chapter 6 - Functions.ipynb  Python Basics - Chapter 6 - Functions.py
notebooks/Chapter 7/: Python Basics - Chapter 7 - Classes.ipynb  Python Basics - Chapter 7 - Classes.py
notebooks/Chapter 8/: Python Basics - Chapter 8 - Miscellaneous.ipynb  (+1 more)
