[tool.poetry]
name = "python-101"
version = "0.1.0"
description = ""
authors = ["Violet Vivirand <purpleslovemail@gmail.com>"]
license = "cc-by-nc-4.0"

[tool.poetry.dependencies]
python = "3.6.9"
jupyter = "^1.0.0"
jupyterlab = "^2.2.9"
jupyter-http-over-ws = "^0.0.8"
jupytext = "^1.7.1"


[tool.poetry.dev-dependencies]
ipython = "7.16.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
